--- a/DL algo/git_gradients.ipynb
+++ b/DL algo/git_gradients.ipynb
@@ -21,7 +21,9 @@
         "id": "zN3h7HzhG_d5"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# testing now 1"
+      ]
     },
     {
       "cell_type": "code",
@@ -32,7 +34,7 @@
       "metadata": {
         "id": "0P2myITkHBzq"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +68,7 @@
         "id": "6RuYl1EpHB36",
         "outputId": "2e27256d-bfb6-4c09-da19-f4e702359bfa"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -88,7 +90,7 @@
       "metadata": {
         "id": "nOUACSQ6HB_y"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +105,7 @@
         "id": "vSPaujUUHCBC",
         "outputId": "beeb30d3-c636-4886-d567-15410919e538"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +127,7 @@
       "metadata": {
         "id": "IV0f1Jt-HCCV"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +142,7 @@
         "id": "dNEYiYzkHCEG",
         "outputId": "c9ced410-f731-4990-d821-fa1b33b41001"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,7 +168,7 @@
         "id": "y6ybqnoyHCF6",
         "outputId": "4a8f8a5d-bc62-4cad-e911-0cff324f23b5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -201,7 +203,7 @@
         "id": "vdyhP_vkHCIR",
         "outputId": "ad13555e-b354-46eb-f669-a0ffd45079ee"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -227,7 +229,7 @@
         "id": "MvSFeChRHCJM",
         "outputId": "bc41056d-50d2-462f-fbb7-772b6d195fad"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,7 +255,7 @@
         "id": "3KYSkfrlH6Sg",
         "outputId": "b4d24504-204b-44a4-f226-15d1a720a446"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +282,7 @@
         "id": "Yeyg0pnDHCKP",
         "outputId": "16136b43-d3b8-42e8-ca34-7209fe418a4e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,7 +308,7 @@
         "id": "-sly6Y5MHCLp",
         "outputId": "b3eba8b1-1606-49cc-c208-fb200ebfa4a5"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +343,7 @@
         "id": "V6TpCd8yHCON",
         "outputId": "b157bf7c-0e04-487b-a480-8c18561dee44"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,7 +371,7 @@
         "id": "9fksu-pDHCP-",
         "outputId": "3a458778-1a8c-41d0-db1c-164e7ebe8a6c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +397,7 @@
         "id": "sT2BOKcHHCRf",
         "outputId": "2d2a5db0-4b8b-43a9-d918-3af0d05aa44e"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -439,7 +441,7 @@
         "id": "ZvbPIqrXIG4Q",
         "outputId": "4ddba906-98f3-4987-c7da-fb8077b3be95"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -464,7 +466,7 @@
       "metadata": {
         "id": "FUDMaGv4IG6T"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -479,7 +481,7 @@
         "id": "Z4H_cCqwIG9H",
         "outputId": "267af495-0c14-46dd-c36a-d7b03f83a1b3"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -507,7 +509,7 @@
         "id": "OovFz81HIG_G",
         "outputId": "bce98421-3e7e-41d2-9f79-1fbdaa634ef1"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -543,7 +545,7 @@
         "id": "2cBsTh-8IHBB",
         "outputId": "9163401f-a4b5-4556-b7c7-366ee43e9752"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -570,7 +572,7 @@
         "id": "b8HzP9z3JPQq",
         "outputId": "545a770f-1c90-4a10-d619-04c8099d0f6c"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -594,7 +596,7 @@
       "metadata": {
         "id": "u3bbxZz4IHCF"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -609,7 +611,7 @@
         "id": "ILeAD0pmIHEA",
         "outputId": "8e4e7612-38e5-4350-92cf-6239947349ae"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +638,7 @@
         "id": "0EAywkQRJLc8",
         "outputId": "366dd9fa-ff80-4492-b345-6cf2f5b6fd49"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -672,7 +674,7 @@
         "id": "dyoWlDXWJLlW",
         "outputId": "7f469812-1874-4ad3-882d-64f3e162b45e"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -697,7 +699,7 @@
       "metadata": {
         "id": "y9msaISAJLm2"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -712,7 +714,7 @@
         "id": "QaCsshTaJLoD",
         "outputId": "95870c5a-3b66-48a7-9bc6-b4f64e5ee594"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -739,7 +741,7 @@
         "id": "oS-cqCbnJLpr",
         "outputId": "f4963728-1cd9-47af-bdef-668c8486ef59"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -775,7 +777,7 @@
         "id": "-Vu0flu4JLtI",
         "outputId": "b1357dd2-f25a-4ffb-fdeb-bc8d24a3f0df"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,7 +799,7 @@
       "metadata": {
         "id": "IJQjRbKtJLuY"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -812,7 +814,7 @@
         "id": "abEuh6UvJLwA",
         "outputId": "e44c92d1-0c95-458b-c987-6f0666ce089a"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -841,7 +843,7 @@
         "id": "uNNNafV5MYBs",
         "outputId": "0e894f60-1d15-4928-c668-600496b6ee75"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -868,7 +870,7 @@
         "id": "CGLQlGgiMoqg",
         "outputId": "eb40f77b-c338-4d66-f2f9-f1c4e0ea493e"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -890,7 +892,7 @@
       "metadata": {
         "id": "PugwRCJhMZj-"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -905,7 +907,7 @@
         "id": "tNoVYF1nMZmN",
         "outputId": "43fcb2e5-f7ac-4a38-d7ac-c04b5b0769d0"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -931,7 +933,7 @@
         "id": "D4qbXpXbMZoy",
         "outputId": "b08c3fdb-c097-47cd-f67f-888535a47169"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -975,7 +977,7 @@
         "id": "j-cU2qi0MZr1",
         "outputId": "3274337d-f89e-475f-9b0e-a18452e985ad"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -998,7 +1000,7 @@
       "metadata": {
         "id": "3p2HXQppMZs9"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1013,7 +1015,7 @@
         "id": "DuPR2IaDMZt2",
         "outputId": "39f7c7c3-e80f-43a5-bf7e-0d4ceae30ffc"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1039,7 +1041,7 @@
       "metadata": {
         "id": "a87MQVGMMZvT"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1050,7 +1052,7 @@
       "metadata": {
         "id": "5w6bKnudMZwz"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1065,7 +1067,7 @@
         "id": "eaMUcsebMZyY",
         "outputId": "c604df24-f000-494c-ab42-7f834ebd98f7"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1092,7 +1094,7 @@
         "id": "lYaFogR4NLeS",
         "outputId": "c2bef702-e90b-4c68-8752-609f9975f7c3"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1120,7 +1122,7 @@
         "id": "to0arkexMZ0D",
         "outputId": "d3258aba-0297-4dc3-9d14-cd53b3b516f6"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1156,7 +1158,7 @@
         "id": "zrwz1TAEMZ3X",
         "outputId": "49b33de4-d0f3-46d8-82c0-0f7147700a6c"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1179,7 +1181,7 @@
       "metadata": {
         "id": "FmXAeOmLMZ5P"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1194,7 +1196,7 @@
         "id": "5BjXvoNzMZ7N",
         "outputId": "bdc08a1b-9283-4b83-fad3-2641bf94b68b"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1220,7 +1222,7 @@
       "metadata": {
         "id": "AmyFjvjrMZ8j"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1231,7 +1233,7 @@
       "metadata": {
         "id": "BhvOOsu9MZ-z"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1246,7 +1248,7 @@
         "id": "QNaImVziMaBt",
         "outputId": "bc1642da-4c28-46fc-835b-4348e752bed4"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1273,7 +1275,7 @@
         "id": "euq5z0S_MaDz",
         "outputId": "3f944380-592b-4efb-dd95-1be196a48d25"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1301,7 +1303,7 @@
         "id": "jA-GIr8-NVb8",
         "outputId": "316c9ff6-1de2-4352-c4c1-d8b1a573d175"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
